# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

action("proto_gen") {
  script = "protoc_runner.py"

  sources = [ "web_download.proto" ]

  proto_in_dir = rebase_path(".", root_build_dir)
  output_dir = rebase_path("$target_gen_dir", root_build_dir)

  protoc = "clang_x64/thirdparty/protobuf/protoc"
  if(ohos_indep_compiler_enable){
    protoc = rebase_path("//binarys/third_party/protobuf/innerapis/protoc/clang_x64/libs/protoc")
  }

  args = sources
  args += [
    "--protoc=$protoc",
    "--cpp-out=$output_dir",
    "--protos-dir=$proto_in_dir",
  ]

  outputs = [
    "$target_gen_dir/web_download.pb.cc",
    "$target_gen_dir/web_download.pb.h",
  ]

  external_deps = [ "protobuf:protoc($host_toolchain)" ]
}
