# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")
import("../../../../config.gni")

group("fuzztest") {
  testonly = true
  deps = []
  if (webview_battery_manager_enable) {
    deps += [
      "batteryevent_fuzzer:BatteryEventFuzzTest",
      "batterymgrclient_fuzzer:BatteryMgrClientFuzzTest",
      "chargingtime_fuzzer:ChargingTimeFuzzTest",
      "discharging_fuzzer:DisChargingFuzzTest",
      "getlevel_fuzzer:GetLevelFuzzTest",
      "ischarging_fuzzer:IsChargingFuzzTest",
      "receiveevent_fuzzer:ReceiveEventFuzzTest",
      "stoplisten_fuzzer:StopListenFuzzTest",
    ]
  }
}
