# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "web/webview"

config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "../../../../interfaces/inner_api/include",
    "../../../../interfaces/inner_api/src",
  ]
}

ohos_unittest("web_clipboard_controller_test") {
  module_out_path = module_output_path

  sources = [ "clipboard_controller_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = [
    "../../../../interfaces/inner_api:web_inner_kit",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "ability_base:zuri",
    "c_utils:utils",
    "hilog:libhilog",
    "image_framework:image_native",
    "pasteboard:pasteboard_client",
    "webview:libnweb",
  ]
}

group("unittest") {
  testonly = true
  deps = [ ":web_clipboard_controller_test" ]
}
