# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "web/webview"

config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "../../../../ohos_adapter/graphic_adapter/include",
    "../../../../ohos_nweb/include",
  ]
}

ohos_unittest("graphic_adapter_test") {
  module_out_path = module_output_path

  sources = [
    "graphic_adapter_test.cpp",
    "native_image_adapter_impl_test.cpp",
    "surface_adapter_impl_test.cpp",
    "window_adapter_impl_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = [
    "../../../../ohos_adapter:nweb_ohos_adapter",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "ability_runtime:app_manager",
    "c_utils:utils",
    "graphic_2d:libcomposer",
    "graphic_surface:surface",
    "hilog:libhilog",
    "relational_store:native_rdb",
  ]
}

group("unittest") {
  testonly = true
  deps = [ ":graphic_adapter_test" ]
}
